--- a/Zadanie1/style.css
+++ b/Zadanie1/style.css
@@ -19,17 +19,19 @@
 }
 
 
+.carousel-inner{
 
-
-#owl-demo .item img{
-
-    display: block;
-   
-    background-attachment: fixed;
-    background-position: center;
-
+    width: 100%;
+    height: 40vh;
+    background-size: contain,cover;
 }
-.nav{
+
+
+.container-fluid{
+    width: 80%;
+ 
+    margin-left: 100px;
+    margin-right: 100px;
 
 
 
@@ -63,6 +65,9 @@ figcaption{
 
 figure{
     border:none;
+    display: block;
+    
+   
 }
 
 main{
@@ -70,5 +75,26 @@ main{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-left: 100px;
+    margin-right: 100px;
  
  }
+
+ .howIt {
+     top:50%;
+     left:35%;
+     margin-top: 20px;
+    position: relative;
+     display: inline-block;
+     text-align: center;
+     
+     
+     
+ }
+
+
+
+.but{
+    background-color: transparent;
+    position: relative;
+}
